Fix z-index of window div

--- a/css/styles.css
+++ b/css/styles.css
@@ -476,7 +476,7 @@ body {
   top: 75px;
   left: 680px;
   box-shadow: 0.2em 0.2em rgba(0, 0, 0, 0.8);
-  z-index: 3;
+  z-index: 2;
 }
 .window::before {
   content: "";
